added new stylus mixin

--- a/style.css
+++ b/style.css
@@ -1,21 +1,19 @@
 .parent {
-  display: flex;
+  background-color: myWhite;
 }
 .item {
   width: 150px;
   height: 150px;
   background-color: #f00;
   border: 1px solid #000;
-  flex: 1;
 }
 .row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   padding: 5px;
-}
-.row .column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
