added mixin functions

--- a/mixins.styl
+++ b/mixins.styl
@@ -1,6 +1,21 @@
-flex()
+flexbox()
   display -webkit-box
   display -moz-box
   display -ms-flexbox
   display -webkit-flex
   display flex
+
+flex(values)
+  -webkit-box-flex: values;
+  -moz-box-flex: values;
+  -webkit-flex: values;
+  -ms-flex: values;
+  flex: values;
+
+order(num)
+  -webkit-box-ordinal-group: num;
+  -moz-box-ordinal-group: num;
+  -ms-flex-order: num;
+  -webkit-order: num;
+  order: num;
+
