--- a/style.styl
+++ b/style.styl
@@ -1,16 +1,16 @@
 @import 'mixins'
 
-.parent
-  background-color myWhite
-
 .item
   width 150px
   height 150px
   background-color red
   border 1px solid black
 
+.last
+  order(6)
+
 .row
-  flex()
+  flexbox()
   flex-direction row
   justify-content space-around
   padding 5px
