--- a/mixins.styl
+++ b/mixins.styl
@@ -5,7 +5,7 @@ flexbox()
   display -webkit-flex
   display flex
 
-flex(values)
+flex(values...)
   -webkit-box-flex: values;
   -moz-box-flex: values;
   -webkit-flex: values;
