--- a/style.styl
+++ b/style.styl
@@ -9,8 +9,12 @@
 .last
   order(6)
 
+.layout
+  flexbox()
+
 .row
   flexbox()
-  flex-direction row
   justify-content space-around
+  flex-flow row wrap
   padding 5px
+
