--- a/variables.styl
+++ b/variables.styl
@@ -1,8 +1,11 @@
 // Layout
 // ------------------------------
+baseline-grid = 8px
 
-$baseline-grid:            8px !default;
-$layout-breakpoint-sm:     600px !default;
-$layout-breakpoint-md:     960px !default;
-$layout-breakpoint-lg:     1200px !default;
-$layout-gutter-width:      ($baseline-grid * 2) !default;
+layout-breakpoint-sm = 600px
+
+layout-breakpoint-md = 960px
+
+layout-breakpoint-lg = 1200px
+
+layout-gutter-width = baseline-grid * 2
