--- a/style.css
+++ b/style.css
@@ -1,30 +1,86 @@
+[layout] {
+  box-sizing: border-box;
+  display: flex;
+}
+[layout=vertical] {
+  flex-direction: column;
+}
+[layout-padding],
+[layout][layout-padding] > [flex] {
+  padding: 8px;
+}
+[layout-padding] + [layout-padding] {
+  margin-top: -8px;
+  padding-top: 0;
+}
+[layout-fill] {
+  margin: 0;
+  min-height: 100%;
+  width: 100%;
+}
+[layout-align="center"],
+[layout-align="center center"],
+[layout-align="center start"],
+[layout-align="center end"] {
+  justify-content: center;
+}
+[layout-align="end"],
+[layout-align="end center"],
+[layout-align="end start"],
+[layout-align="end end"] {
+  justify-content: flex-end;
+}
+[layout-align="space-around"],
+[layout-align="space-around center"],
+[layout-align="space-around start"],
+[layout-align="space-around end"] {
+  justify-content: space-around;
+}
+[layout-align="space-between"],
+[layout-align="space-between center"],
+[layout-align="space-between start"],
+[layout-align="space-between end"] {
+  justify-content: space-between;
+}
+[layout-align="center center"],
+[layout-align="start center"],
+[layout-align="end center"],
+[layout-align="space-between center"],
+[layout-align="space-around center"] {
+  align-items: center;
+}
+[layout-align="center start"],
+[layout-align="start start"],
+[layout-align="end start"],
+[layout-align="space-between start"],
+[layout-align="space-around start"] {
+  align-items: flex-start;
+}
+[layout-align="center end"],
+[layout-align="start end"],
+[layout-align="end end"],
+[layout-align="space-between end"],
+[layout-align="space-around end"] {
+  align-items: flex-end;
+}
+[block] {
+  display: block;
+}
+[inline-block] {
+  display: inline-block;
+}
+[hide] {
+  display: none;
+}
+[show] {
+  display: inherit;
+}
 .item {
   width: 150px;
   height: 150px;
   background-color: #f00;
   border: 1px solid #000;
 }
-.last {
-  -webkit-box-ordinal-group: 6;
-  -moz-box-ordinal-group: 6;
-  -ms-flex-order: 6;
-  -webkit-order: 6;
-  order: 6;
-}
-.layout {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-.row {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  justify-content: space-around;
-  flex-flow: row wrap;
-  padding: 5px;
+[flex] {
+  flex: 1;
 }
