--- a/style.styl
+++ b/style.styl
@@ -1,4 +1,6 @@
+@import 'variables'
 @import 'mixins'
+@import 'layout'
 
 .item
   width 150px
@@ -6,15 +8,5 @@
   background-color red
   border 1px solid black
 
-.last
-  order(6)
-
-.layout
-  flexbox()
-
-.row
-  flexbox()
-  justify-content space-around
-  flex-flow row wrap
-  padding 5px
-
+[flex]
+  flex 1
