--- a/style.css
+++ b/style.css
@@ -75,12 +75,98 @@
 [show] {
   display: inherit;
 }
+[flex] {
+  flex: 1;
+}
+[flex=5] {
+  flex: 0 0 5%;
+  max-width: 5%;
+}
+[flex=10] {
+  flex: 0 0 10%;
+  max-width: 10%;
+}
+[flex=15] {
+  flex: 0 0 15%;
+  max-width: 15%;
+}
+[flex=20] {
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+[flex=25] {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+[flex=30] {
+  flex: 0 0 30%;
+  max-width: 30%;
+}
+[flex=35] {
+  flex: 0 0 35%;
+  max-width: 35%;
+}
+[flex=40] {
+  flex: 0 0 40%;
+  max-width: 40%;
+}
+[flex=45] {
+  flex: 0 0 45%;
+  max-width: 45%;
+}
+[flex=50] {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+[flex=55] {
+  flex: 0 0 55%;
+  max-width: 55%;
+}
+[flex=60] {
+  flex: 0 0 60%;
+  max-width: 60%;
+}
+[flex=65] {
+  flex: 0 0 65%;
+  max-width: 65%;
+}
+[flex=70] {
+  flex: 0 0 70%;
+  max-width: 70%;
+}
+[flex=75] {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+[flex=80] {
+  flex: 0 0 80%;
+  max-width: 80%;
+}
+[flex=85] {
+  flex: 0 0 85%;
+  max-width: 85%;
+}
+[flex=90] {
+  flex: 0 0 90%;
+  max-width: 90%;
+}
+[flex=95] {
+  flex: 0 0 95%;
+  max-width: 95%;
+}
+[flex="33"],
+[flex="34"] {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+[flex="66"],
+[flex="67"] {
+  flex: 0 0 66.66%;
+  max-width: 66.66%;
+}
 .item {
   width: 150px;
   height: 150px;
   background-color: #f00;
   border: 1px solid #000;
-}
-[flex] {
-  flex: 1;
 }
