--- a/layout.styl
+++ b/layout.styl
@@ -112,7 +112,7 @@ layout-presets(str)
   // (1-19) * 5 = 5-95%
   for i in 1..19
     num = i * 5
-    [{str}={num}]
+    [{str}="#{num}"]
       layout-preset(i * 5 + '%')
 
   [{str}="33"], [{str}="34"]
