--- a/layout.styl
+++ b/layout.styl
@@ -111,8 +111,8 @@ layout-presets(str)
 
   // (1-19) * 5 = 5-95%
   for i in 1..19
-    num = i * 5
-    [{str}="#{num}"]
+    num = '"' + i * 5 + '"'
+    [{str}={num}]
       layout-preset(i * 5 + '%')
 
   [{str}="33"], [{str}="34"]
