--- a/style.css
+++ b/style.css
@@ -165,61 +165,61 @@
   max-width: 66.66%;
 }
 [offset="5"] {
-  margin-left: '"5"%';
+  margin-left: 5%;
 }
 [offset="10"] {
-  margin-left: '"10"%';
+  margin-left: 10%;
 }
 [offset="15"] {
-  margin-left: '"15"%';
+  margin-left: 15%;
 }
 [offset="20"] {
-  margin-left: '"20"%';
+  margin-left: 20%;
 }
 [offset="25"] {
-  margin-left: '"25"%';
+  margin-left: 25%;
 }
 [offset="30"] {
-  margin-left: '"30"%';
+  margin-left: 30%;
 }
 [offset="35"] {
-  margin-left: '"35"%';
+  margin-left: 35%;
 }
 [offset="40"] {
-  margin-left: '"40"%';
+  margin-left: 40%;
 }
 [offset="45"] {
-  margin-left: '"45"%';
+  margin-left: 45%;
 }
 [offset="50"] {
-  margin-left: '"50"%';
+  margin-left: 50%;
 }
 [offset="55"] {
-  margin-left: '"55"%';
+  margin-left: 55%;
 }
 [offset="60"] {
-  margin-left: '"60"%';
+  margin-left: 60%;
 }
 [offset="65"] {
-  margin-left: '"65"%';
+  margin-left: 65%;
 }
 [offset="70"] {
-  margin-left: '"70"%';
+  margin-left: 70%;
 }
 [offset="75"] {
-  margin-left: '"75"%';
+  margin-left: 75%;
 }
 [offset="80"] {
-  margin-left: '"80"%';
+  margin-left: 80%;
 }
 [offset="85"] {
-  margin-left: '"85"%';
+  margin-left: 85%;
 }
 [offset="90"] {
-  margin-left: '"90"%';
+  margin-left: 90%;
 }
 [offset="95"] {
-  margin-left: '"95"%';
+  margin-left: 95%;
 }
 [attr="33"],
 [attr="34"] {
@@ -270,6 +270,60 @@
   -ms-flex-order: 6;
   -webkit-order: 6;
   order: 6;
+}
+[layout-sm] {
+  flex-direction: row;
+}
+[layout-sm=vertical] {
+  flex-direction: column;
+}
+[block-sm] {
+  display: block;
+}
+[inline-block-sm] {
+  display: inline-block;
+}
+[show-sm] {
+  display: inherit;
+}
+[hide-sm] {
+  display: none;
+}
+[layout-md] {
+  flex-direction: row;
+}
+[layout-md=vertical] {
+  flex-direction: column;
+}
+[block-md] {
+  display: block;
+}
+[inline-block-md] {
+  display: inline-block;
+}
+[show-md] {
+  display: inherit;
+}
+[hide-md] {
+  display: none;
+}
+[layout-lg] {
+  flex-direction: row;
+}
+[layout-lg=vertical] {
+  flex-direction: column;
+}
+[block-lg] {
+  display: block;
+}
+[inline-block-lg] {
+  display: inline-block;
+}
+[show-lg] {
+  display: inherit;
+}
+[hide-lg] {
+  display: none;
 }
 .item {
   width: 150px;
